--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{
     text-align: center;
     font-size: 60px;
-    color:gold
+    color:rgb(255, 217, 0)
 }
 h2{
     text-align: center;
@@ -9,5 +9,5 @@ h2{
     color:rgb(255, 115, 0)
 }
 body{
-    background-color:gray;
+    background-color:rgb(0, 0, 0)8)218, 8, 8);
 }
