--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ h2{
     font-size: 38px;
     color:rgb(255, 115, 0)
 }
+h3{
+    text-align: center;
+    font-size: 60px;
+    color:rgb(255, 255, 255)
+}
+
 body{
     background-color:rgb(0, 0, 0)8)218, 8, 8);
 }
