--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ h1{
 h2{
     text-align: center;
     font-size: 38px;
-    color:rgb(255, 115, 0)
+    color:rgb(255, 255, 255)
 }
 h3{
     text-align: center;
     font-size: 60px;
-    color:rgb(255, 255, 255)
+    color:rgb(255, 115, 0)255)
 }
 
 body{
